# wallet

./: .env  .gitignore  Dockerfile  config.yaml  database.db  log_file.txt  pyproject.toml  task
wallet/: main.py
wallet/setup/: auth.py  db.py  dependencies.py  exceptions.py  permissions.py  settings.py  setup.py
wallet/transactions/: dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
wallet/users/: models.py  repositories.py  routers.py  schemas.py  services.py
